--- a/contact.html
+++ b/contact.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <nav class=contact>
+        <h2>Contact</h2>
+    </nav>
     <header>
-        <h1>Contact</h1>
         <div class="container">
             <div class="row">
                 <div class="name1">Name</div>
-                <div class="name"></div>
+                <input class="name"></input>
                 <div class="email1">Email</div>
-                <div class="email"></div>
+                <input class="email"></inout>
                 <div class="message1">Message</div>
-                <div class="message"></div>
+                <input class="message"></inout>
                 <div class="submit1"></div>
                 <button class="submit">Submit</button>
             </div>
