--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Kimsreang Phan</h1>
+    <nav>
+        <h1>Kimsreang Phan</h1>  
         <a href="./portfolio.html"><strong>Portfolio</strong></a>
-        <a href="./contact.html"><strong>Contact</strong></a>
+        <a href="./contact.html"><strong>Contact</strong></a>      
+    </nav>
+        <h2>About Me</h2>
+    <header>
         <div class="container">
-            <h2>About Me</h2>
             <img src="assets/image/IMG_9127.jpeg" alt="Me" width="175" height="250">
             <p>Welcome to my homepage! My name is Kimsreang and I am a student at 
                 University of California, Irvine. I am studying Bootcamp Coding - class of 2019.
@@ -22,8 +24,6 @@
                 Thank you for visiting my page!
             </p>
         </div>
-    </header>
-        
-    
+    </header>   
 </body>
 </html>
