--- a/portfolio.html
+++ b/portfolio.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
-    
-        <div></div>
-        <div></div>
+    <h1><strong>Welcome to Portfolio Page</strong></h1>
 
     </div>
 </body>
